--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
   "scripts": {
-    "seed": "node  seeds/index.js"
+    "seed": "node  seeds/index.js",
+    "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.10.0"
-  }
+  },
+  "name": "social-network-api",
+  "version": "1.0.0",
+  "description": "Simple social network API for CRUD ops on Users, User's Thoughts, and Reactions to those Thoughts",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/angel-pup/social-network-api.git"
+  },
+  "author": "Vess Stewart",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/angel-pup/social-network-api/issues"
+  },
+  "homepage": "https://github.com/angel-pup/social-network-api#readme"
 }
