--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "seed": "node  seeds/index.js",
+    "seed": "node ./seeds/index.js",
     "start": "node server.js"
   },
   "dependencies": {
